--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head lang="fr">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta charset="UTF-8">
-<title>Online Store</title>
+<title>Littleworld</title>
 <link rel="stylesheet/less" type="text/css" href="less/styles.less" />
 </head>
 <body>
@@ -12,8 +12,7 @@
 			<span class="masque">
 			</span>
 			<div class="logo">
-				<img aria-level="1" src="images/MappeMonde_Pate.png" alt="Logo">
-				<h1>Little World</h1>
+				<img aria-level="1" src="images/Logo_Little_World2.png" alt="Logo">
 			</div>
 			<button class="B1">
 				Inscription
@@ -31,17 +30,25 @@
 					<li class="sortie"><a href="">Sortie</a></li>
 				</ul>
 			</div>
-			<div class="onglet">
+			<div class="content">
+			<aside>
+			</aside><!--
+			--><div class="onglet">
 				<div class="container">
-					<h2>Fiche Pays</h2>
-					<div class="slider"></div>
+					<h2 class="label">Fiche Pays :</h2>
+					<div class="slider">
+						<ul>
+							<li></li>
+						</ul>
+					</div>
 					<button>Télécharger</button>
 				</div>
 				<div class="container">
-					<h2>Livre</h2>
+					<h2 class="label">Livre : </h2>
 					<div class="slider"></div>
 					<button>Télécharger</button>
 				</div>
+			</div>
 			</div>
 		</section>
 	</main>
