--- a/index.html
+++ b/index.html
@@ -38,15 +38,28 @@
 					<h2 class="label">Fiche Pays :</h2>
 					<div class="slider">
 						<ul>
-							<li></li>
+							<li><img src="images/rabbit-3075088_640.png" alt=""></li>
+							<li><img src="images/rabbit-3075088_640.png" alt=""></li>
+							<li><img src="images/rabbit-3075088_640.png" alt=""></li>
 						</ul>
 					</div>
-					<button>Télécharger</button>
+					<div class="center">
+						<button class="B1">Télécharger</button>
+					</div>
 				</div>
 				<div class="container">
 					<h2 class="label">Livre : </h2>
-					<div class="slider"></div>
-					<button>Télécharger</button>
+					<div class="slider">
+						<ul>
+							<li><img src="images/rabbit-3075088_640.png" alt=""></li>
+							<li><img src="images/rabbit-3075088_640.png" alt=""></li>
+							<li><img src="images/rabbit-3075088_640.png" alt=""></li>
+						</ul>
+					</div>
+					<div class="center">
+						<button class="B1">Télécharger PDF</button>
+						<button class="B1">Créer EPUB</button>
+					</div>
 				</div>
 			</div>
 			</div>
