view createfiche.html, add bootstrap

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head lang="fr">
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta charset="UTF-8">
-<title>Littleworld</title>
-<link rel="stylesheet/less" type="text/css" href="less/styles.less" />
-</head>
+	<head lang="fr">
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		<meta charset="UTF-8">
+		<title>Littleworld</title>
+		<link rel="stylesheet/less" type="text/css" href="less/styles.less" />
+	</head>
 <body>
 	<main>
 		<header>
@@ -24,7 +24,7 @@
 		<section>
 			<div class="menu">
 				<ul>
-					<li class="fiche"><a href="">Création d'une fiche</a></li>
+					<li class="fiche"><a href="createfiche.html">Création d'une fiche</a></li>
 					<li class="livre"><a href="">Créer un livre</a></li>
 					<li class="bibliotheque"><a href="">Bibliothèque</a></li>
 					<li class="sortie"><a href="">Sortie</a></li>
