add structure createfiche.html

--- a/createfiche.html
+++ b/createfiche.html
@@ -15,7 +15,7 @@
 				<div class="logo">
 					<img aria-level="1" src="images/Logo_Little_World2.png" alt="Logo">
 				</div>
-				<button class="B1">
+				<button class="btn-form">
 					Inscription
 				</button>
 				<button class="B1">
@@ -82,7 +82,7 @@
 										</div>	
 										<div class="form-row">
 											<div class="col-md-12">
-												<label for="description">Description / Information</label>
+												<label for="description">Histoire du pays</label>
 												<textarea name="description" id="description" class="form-control" rows="5" ></textarea>
 											</div>
 										</div>		
