update link nav

--- a/createbook.html
+++ b/createbook.html
@@ -25,8 +25,8 @@
 			<section>
 				<div class="menu">
 					<ul>
-						<li class="fiche"><a href="">Création d'une fiche</a></li>
-						<li class="livre"><a href="">Créer un livre</a></li>
+						<li class="fiche"><a href="createfiche.html">Création d'une fiche</a></li>
+						<li class="livre"><a href="createbook.html">Créer un livre</a></li>
 						<li class="bibliotheque"><a href="">Bibliothèque</a></li>
 						<li class="sortie"><a href="">Sortie</a></li>
 					</ul>
