--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<div class="menu">
 				<ul>
 					<li class="fiche"><a href="createfiche.html">Création d'une fiche</a></li>
-					<li class="livre"><a href="">Créer un livre</a></li>
+					<li class="livre"><a href="createbook.html">Créer un livre</a></li>
 					<li class="bibliotheque"><a href="">Bibliothèque</a></li>
 					<li class="sortie"><a href="">Sortie</a></li>
 				</ul>
