Mise à jour du header (80%)

--- a/createfiche.html
+++ b/createfiche.html
@@ -96,7 +96,7 @@
 											<div class="col-md-12">
 												<p>Choix de la mise en page</p>
 												<div id="choix-mise-en-page">
-													<input type="radio" id="page1" name="page" checked="checked"><label for="page1"><image src="images/page1.PNG" alt="mise en page image a gauche"></label>
+													<input type="radio" id="page1" name="page" checked="checked"><label for="page1"><img src="images/page1.PNG" alt="mise en page image a gauche"></label>
 													<input type="radio" id="page2" name="page" ><label for="page2"><image src="images/page1.PNG" alt="mise en page image a gauche"></label>
 													<input type="radio" id="page3" name="page" ><label for="page3"><image src="images/page1.PNG" alt="mise en page image a gauche"></label>
 
