integration version Php + creattion de fiche

--- a/header.html
+++ b/header.html
@@ -1,21 +1,11 @@
-<!DOCTYPE html>
-<html>
-	<head lang="fr">
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<meta charset="UTF-8">
-		<title>Littleworld</title>
-		<link rel="stylesheet/less" type="text/css" href="less/styles.less" />
-		<link rel="stylesheet" type="text/css" href="Bootstrap/css/bootstrap.min.css" />
-	</head>
-<body>
-    <main>
+
         <header class="head">
-            <div class="background">
-                <img src="images/england-2906827_1280.png" alt="">
-                <img src="images/Drapeau_Allemagne.png" alt="">
-                <img src="images/flag-of-norway-3116623_1280.jpg" alt="">
-                <img src="images/Drapeau_France.png" alt="">
-                <img src="images/catalonia-3087795_1280.png" alt="">
+            <div class="row">
+                <img src="images/england-2906827_1280.png" alt="" class="col-md-2">
+                <img src="images/Drapeau_Allemagne.png" alt="" class="col-md-2">
+                <img src="images/flag-of-norway-3116623_1280.jpg" alt="" class="col-md-2">
+                <img src="images/Drapeau_France.png" alt="" class="col-md-2">
+                <img src="images/catalonia-3087795_1280.png" alt="" class="col-md-2">
             </div>
             <div>
                 <div class="logo">
@@ -37,7 +27,3 @@
                 </ul>
             </div>
         </header>
-    </main>
-<script src="js/less.min.js" ></script>
-</body>
-</html>
