--- a/createfiche.html
+++ b/createfiche.html
@@ -39,7 +39,7 @@
 					--><div class="onglet">
 							<div class="container">
 								<div class="row">
-									<form class="needs-validation" novalidate style="width:100%;">
+									<form class="needs-validation" id="createFiche" novalidate style="width:100%;">
 										<div class="form-row">
 											<div class="col-md-6">
 												<label for="nom">Nom du pays</label>
@@ -71,13 +71,13 @@
 										
 											<div class="col-md-6">
 												<label for="population">Population</label>
-												<input type="text" class="form-control" id="population" placeholder="67 795 000" pattern="[1-9]" required>
+												<input type="text" class="form-control" id="population" placeholder="67 795 000"  required>
 											</div>
 										</div>	
 										<div class="form-row">
 											<div class="col-md-6">
 												<label for="superficie">Superficie (km²)</label>
-												<input type="text" class="form-control" id="superficie" placeholder="672 051" pattern="[1-9]" required>
+												<input type="text" class="form-control" id="superficie" placeholder="672 051"  required>
 											</div>
 										</div>	
 										<div class="form-row">
@@ -86,12 +86,12 @@
 												<textarea name="description" id="description" class="form-control" rows="5" ></textarea>
 											</div>
 										</div>		
-										<div class="form-row">
-											<div class="col-md-12">
-												<label for="image">Insérer une image</label>
-												<input name="image" id="image" type="file">
-											</div>
-										</div>
+										<!--<div class="form-row">-->
+											<!--<div class="col-md-12">-->
+												<!--<label for="image">Insérer une image</label>-->
+												<!--<input name="image" id="image" type="file">-->
+											<!--</div>-->
+										<!--</div>-->
 										<div class="form-row">
 											<div class="col-md-12">
 												<p>Choix de la mise en page</p>
@@ -126,24 +126,69 @@
 	<script src="js/less.min.js" ></script>
 	<script src="js/jquery.js" ></script>
 	<script>
-		// Example starter JavaScript for disabling form submissions if there are invalid fields
-		(function() {
-		  'use strict';
 		  window.addEventListener('load', function() {
 			// Fetch all the forms we want to apply custom Bootstrap validation styles to
 			var forms = document.getElementsByClassName('needs-validation');
 			// Loop over them and prevent submission
 			var validation = Array.prototype.filter.call(forms, function(form) {
 			  form.addEventListener('submit', function(event) {
-				if (form.checkValidity() === false) {
-				  event.preventDefault();
-				  event.stopPropagation();
-				}
-				form.classList.add('was-validated');
+
+
+                  event.preventDefault();
+                  $.ajax({
+                      url:"http://localhost/littleworldBack/fiche/",
+                      data:{
+                          nom : document.getElementById('nom').value,
+						  continent : document.getElementById('continent').value,
+						  capitale : document.getElementById('capitale').value,
+						  langue : document.getElementById('langue').value,
+                          monnaie : document.getElementById('monnaie').value,
+                          population : document.getElementById('population').value,
+                          superficie : document.getElementById('superficie').value,
+                          description : document.getElementById('description').value,
+                      },
+                      type:'PUT',
+                      datatype:'json',
+                      success: function(data){
+                          console.log(data)
+                      },
+                      error: function(xhr, status, error) {
+                          console.log(xhr.responseText);
+                      }
+
+
+                  })
+
+//			      console.log('yoyo');
+//				if (form.checkValidity() === false) {
+//				  event.preventDefault();
+//				  event.stopPropagation();
+//
+//				} else{
+//                    event.preventDefault();
+//                    $.ajax({
+//                        url:"test.php",
+//                        data:{
+//                            nom : 'toto'
+//                        },
+//                        type:'POST',
+//                        datatype:'json',
+//                        contentType : 'application/json',
+//                        success: function(data){
+//							console.log(data)
+//                        },
+//                        error: function(xhr, status, error) {
+//                            console.log(xhr.responseText);
+//                        }
+//
+//
+//                    })
+//				}
+//				form.classList.add('was-validated');
 			  }, false);
 			});
 		  }, false);
-		})();
+
 	</script>
 							
 
