--- a/header.html
+++ b/header.html
@@ -22,8 +22,7 @@
                 <ul>
                     <li class="fiche"><a href="createfiche.html">Création d'une fiche</a></li>
                     <li class="livre"><a href="">Créer un livre</a></li>
-                    <li class="bibliotheque"><a href="">Bibliothèque</a></li>
-                    <li class="sortie"><a href="">Sortie</a></li>
+                    <li class="bibliotheque"><a href="">Bibliothèque / Sortie</a></li>
                 </ul>
             </div>
         </header>
